[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
chrono = "0.4.19"
env_logger = "0.9.0"
ifstructs = "0.1.1"
#clap = { version = "3.0.0-rc.4", features = ["derive"] }
libc = "0.2.111"
log = "0.4.14"
rand = "0.8.4"
serde = { version = "1.0.131", features = ["derive"] }
toml = "0.5.8"

[dev-dependencies]
pretty_assertions = "1.0.0"
